[package]
name = "rust-password-wasm"
version = "0.1.0"
authors = ["anton_misa <anton_misa@mail.ru>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/antonmisa/rust_password_wasm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rust_password = { git = "https://github.com/antonmisa/rust_password" }